--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,11 +40,12 @@ jobs:
         run: flutter test --coverage
 
       - name: Upload coverage to Codecov
-        uses: codecov/codecov-action@v4
+        uses: codecov/codecov-action@v5
         if: github.event_name == 'push'
         with:
           files: ./coverage/lcov.info
-          fail_ci_if_error: false
+          token: ${{ secrets.CODECOV_TOKEN }}
+          fail_ci_if_error: true
 
   android:
     name: Android
@@ -79,28 +80,11 @@ jobs:
       - name: Build App Bundle
         run: flutter build appbundle --release
 
-      - name: Upload APK artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: android-apk
-          path: build/app/outputs/flutter-apk/app-release.apk
-          retention-days: 7
-
-      - name: Upload App Bundle artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: android-aab
-          path: build/app/outputs/bundle/release/app-release.aab
-          retention-days: 7
-
-      - name: Enable KVM
+      - name: Enable KVM group perms
         run: |
           echo 'KERNEL=="kvm", GROUP="kvm", MODE="0666", OPTIONS+="static_node=kvm"' | sudo tee /etc/udev/rules.d/99-kvm4all.rules
           sudo udevadm control --reload-rules
           sudo udevadm trigger --name-match=kvm
-
-      - name: Gradle cache
-        uses: gradle/actions/setup-gradle@v3
 
       - name: AVD cache
         uses: actions/cache@v4
@@ -109,16 +93,16 @@ jobs:
           path: |
             ~/.android/avd/*
             ~/.android/adb*
-          key: avd-34
+          key: avd-30
 
       - name: Create AVD and generate snapshot for caching
         if: steps.avd-cache.outputs.cache-hit != 'true'
         uses: reactivecircus/android-emulator-runner@v2
         with:
-          api-level: 34
-          arch: x86_64
+          api-level: 30
           target: google_apis
-          force-avd-creation: false
+          arch: x86_64
+          profile: Nexus 6
           emulator-options: -no-window -gpu swiftshader_indirect -noaudio -no-boot-anim -camera-back none
           disable-animations: false
           script: echo "Generated AVD snapshot for caching."
@@ -126,10 +110,10 @@ jobs:
       - name: Run integration tests on Android
         uses: reactivecircus/android-emulator-runner@v2
         with:
-          api-level: 34
-          arch: x86_64
+          api-level: 30
           target: google_apis
-          force-avd-creation: false
+          arch: x86_64
+          profile: Nexus 6
           emulator-options: -no-snapshot-save -no-window -gpu swiftshader_indirect -noaudio -no-boot-anim -camera-back none
           disable-animations: true
           script: flutter test integration_test
@@ -156,20 +140,6 @@ jobs:
 
       - name: Build iOS (no codesign)
         run: flutter build ios --release --no-codesign
-
-      - name: Create iOS IPA
-        run: |
-          mkdir -p Payload
-          cp -r build/ios/iphoneos/Runner.app Payload/
-          zip -r app-release.ipa Payload
-          rm -rf Payload
-
-      - name: Upload IPA artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: ios-ipa
-          path: app-release.ipa
-          retention-days: 7
 
       - name: List available simulators
         run: xcrun simctl list devices available
@@ -213,35 +183,8 @@ jobs:
       - name: Build macOS app
         run: flutter build macos --release
 
-      - name: Create DMG
-        run: |
-          brew install create-dmg
-          create-dmg \
-            --volname "SkipTheBrowse" \
-            --window-pos 200 120 \
-            --window-size 800 400 \
-            --icon-size 100 \
-            --app-drop-link 600 185 \
-            "SkipTheBrowse.dmg" \
-            "build/macos/Build/Products/Release/skipthebrowse.app" || true
-
-      - name: Upload macOS artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: macos-app
-          path: build/macos/Build/Products/Release/skipthebrowse.app
-          retention-days: 7
-
-      - name: Upload DMG artifact
-        if: hashFiles('SkipTheBrowse.dmg') != ''
-        uses: actions/upload-artifact@v4
-        with:
-          name: macos-dmg
-          path: SkipTheBrowse.dmg
-          retention-days: 7
-
       - name: Run integration tests on macOS
-        run: flutter test integration_test
+        run: flutter test integration_test -d macos
 
   linux:
     name: Linux
@@ -276,21 +219,8 @@ jobs:
       - name: Build Linux app
         run: flutter build linux --release
 
-      - name: Create tarball
-        run: |
-          cd build/linux/x64/release/bundle
-          tar -czf ../../../../../skipthebrowse-linux-x64.tar.gz *
-          cd ../../../../../
-
-      - name: Upload Linux artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: linux-x64
-          path: skipthebrowse-linux-x64.tar.gz
-          retention-days: 7
-
       - name: Run integration tests on Linux
-        run: xvfb-run flutter test integration_test
+        run: xvfb-run flutter test integration_test -d linux
 
   windows:
     name: Windows
@@ -318,21 +248,8 @@ jobs:
       - name: Build Windows app
         run: flutter build windows --release
 
-      - name: Create ZIP archive
-        run: |
-          cd build/windows/x64/runner/Release
-          Compress-Archive -Path * -DestinationPath ../../../../../skipthebrowse-windows-x64.zip
-          cd ../../../../../
-
-      - name: Upload Windows artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: windows-x64
-          path: skipthebrowse-windows-x64.zip
-          retention-days: 7
-
       - name: Run integration tests on Windows
-        run: flutter test integration_test
+        run: flutter test integration_test -d windows
 
   web:
     name: Web
@@ -355,21 +272,13 @@ jobs:
         run: flutter pub get
 
       - name: Build web app
-        run: flutter build web --release --web-renderer canvaskit
+        run: flutter build web --release
 
-      - name: Upload web artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: web-build
-          path: build/web
-          retention-days: 7
-
-  release:
-    name: Create Release
+  release-android:
+    name: Release Android & Web
     runs-on: ubuntu-latest
-    needs: [android, ios, macos, linux, windows, web]
+    needs: [android, web]
     if: startsWith(github.ref, 'refs/tags/v')
-
     permissions:
       contents: write
 
@@ -377,23 +286,228 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Download all artifacts
-        uses: actions/download-artifact@v4
+      - name: Setup Java
+        uses: actions/setup-java@v4
         with:
-          path: artifacts
+          distribution: 'temurin'
+          java-version: '17'
 
-      - name: Create Release
+      - name: Setup Flutter
+        uses: subosito/flutter-action@v2
+        with:
+          flutter-version: ${{ env.FLUTTER_VERSION }}
+          channel: 'stable'
+          cache: true
+
+      - name: Get dependencies
+        run: flutter pub get
+
+      - name: Build Android
+        run: |
+          flutter build apk --release
+          flutter build appbundle --release
+
+      - name: Build Web
+        run: flutter build web --release
+
+      - name: Package Web
+        run: |
+          cd build/web
+          tar -czf ../../skipthebrowse-web.tar.gz *
+          cd ../..
+
+      - name: Upload to Release
         uses: softprops/action-gh-release@v2
         with:
           files: |
-            artifacts/android-apk/*.apk
-            artifacts/android-aab/*.aab
-            artifacts/ios-ipa/*.ipa
-            artifacts/macos-dmg/*.dmg
-            artifacts/linux-x64/*.tar.gz
-            artifacts/windows-x64/*.zip
+            build/app/outputs/flutter-apk/app-release.apk
+            build/app/outputs/bundle/release/app-release.aab
+            skipthebrowse-web.tar.gz
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+  release-ios:
+    name: Release iOS
+    runs-on: macos-14
+    needs: [ios]
+    if: startsWith(github.ref, 'refs/tags/v')
+    permissions:
+      contents: write
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Setup Flutter
+        uses: subosito/flutter-action@v2
+        with:
+          flutter-version: ${{ env.FLUTTER_VERSION }}
+          channel: 'stable'
+          cache: true
+
+      - name: Get dependencies
+        run: flutter pub get
+
+      - name: Build iOS
+        run: flutter build ios --release --no-codesign
+
+      - name: Create IPA
+        run: |
+          mkdir -p Payload
+          cp -r build/ios/iphoneos/Runner.app Payload/
+          zip -r skipthebrowse-ios.ipa Payload
+          rm -rf Payload
+
+      - name: Upload to Release
+        uses: softprops/action-gh-release@v2
+        with:
+          files: skipthebrowse-ios.ipa
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+  release-macos:
+    name: Release macOS
+    runs-on: macos-14
+    needs: [macos]
+    if: startsWith(github.ref, 'refs/tags/v')
+    permissions:
+      contents: write
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Setup Flutter
+        uses: subosito/flutter-action@v2
+        with:
+          flutter-version: ${{ env.FLUTTER_VERSION }}
+          channel: 'stable'
+          cache: true
+
+      - name: Enable macOS desktop
+        run: flutter config --enable-macos-desktop
+
+      - name: Get dependencies
+        run: flutter pub get
+
+      - name: Build macOS
+        run: flutter build macos --release
+
+      - name: Create ZIP
+        run: |
+          cd build/macos/Build/Products/Release
+          zip -r ../../../../../skipthebrowse-macos.zip skipthebrowse.app
+          cd ../../../../../
+
+      - name: Upload to Release
+        uses: softprops/action-gh-release@v2
+        with:
+          files: skipthebrowse-macos.zip
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+  release-linux:
+    name: Release Linux
+    runs-on: ubuntu-latest
+    needs: [linux]
+    if: startsWith(github.ref, 'refs/tags/v')
+    permissions:
+      contents: write
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Install Linux dependencies
+        run: |
+          sudo apt-get update -y
+          sudo apt-get install -y clang cmake ninja-build pkg-config libgtk-3-dev liblzma-dev libstdc++-12-dev
+
+      - name: Setup Flutter
+        uses: subosito/flutter-action@v2
+        with:
+          flutter-version: ${{ env.FLUTTER_VERSION }}
+          channel: 'stable'
+          cache: true
+
+      - name: Enable Linux desktop
+        run: flutter config --enable-linux-desktop
+
+      - name: Get dependencies
+        run: flutter pub get
+
+      - name: Build Linux
+        run: flutter build linux --release
+
+      - name: Create tarball
+        run: |
+          cd build/linux/x64/release/bundle
+          tar -czf ../../../../../skipthebrowse-linux-x64.tar.gz *
+          cd ../../../../../
+
+      - name: Upload to Release
+        uses: softprops/action-gh-release@v2
+        with:
+          files: skipthebrowse-linux-x64.tar.gz
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+  release-windows:
+    name: Release Windows
+    runs-on: windows-latest
+    needs: [windows]
+    if: startsWith(github.ref, 'refs/tags/v')
+    permissions:
+      contents: write
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Setup Flutter
+        uses: subosito/flutter-action@v2
+        with:
+          flutter-version: ${{ env.FLUTTER_VERSION }}
+          channel: 'stable'
+          cache: true
+
+      - name: Enable Windows desktop
+        run: flutter config --enable-windows-desktop
+
+      - name: Get dependencies
+        run: flutter pub get
+
+      - name: Build Windows
+        run: flutter build windows --release
+
+      - name: Create ZIP
+        run: |
+          cd build/windows/x64/runner/Release
+          Compress-Archive -Path * -DestinationPath ../../../../../skipthebrowse-windows-x64.zip
+          cd ../../../../../
+
+      - name: Upload to Release
+        uses: softprops/action-gh-release@v2
+        with:
+          files: skipthebrowse-windows-x64.zip
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+  create-release:
+    name: Create GitHub Release
+    runs-on: ubuntu-latest
+    needs: [release-android, release-ios, release-macos, release-linux, release-windows]
+    if: startsWith(github.ref, 'refs/tags/v')
+    permissions:
+      contents: write
+
+    steps:
+      - name: Create Release
+        uses: softprops/action-gh-release@v2
+        with:
+          body: |
+            Release notes will be updated shortly...
           draft: false
           prerelease: false
-          generate_release_notes: true
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
