feat(conversation): Add initial ConversationScreen layout
Creates the basic structure for the conversation screen.
- Displays the conversation ID.
- Renders a list of messages using the MessageWidget.
- Uses flutter_riverpod with a ConsumerStatefulWidget.

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,4 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
+    <!-- Internet permission for API calls -->
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:label="skipthebrowse"
         android:name="${applicationName}"
