--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,12 @@ dependencies:
     sdk: flutter
 
   cupertino_icons: ^1.0.8
+  flutter_riverpod: ^2.6.1
+  retrofit: ^4.9.0
+  dio: ^5.9.0
+  json_annotation: ^4.9.0
+  equatable: ^2.0.7
+  go_router: ^17.0.0
 
 dev_dependencies:
   flutter_test:
@@ -19,6 +25,12 @@ dev_dependencies:
   flutter_lints: ^6.0.0
   integration_test:
     sdk: flutter
+  mocktail: ^1.0.4
+  const_date_time: ^1.2.1
+  http_mock_adapter: ^0.6.1
+  build_runner: ^2.10.2
+  retrofit_generator: ^10.0.6
+  json_serializable: ^6.11.1
 
 flutter:
   uses-material-design: true
