--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,7 +2,7 @@ name: skipthebrowse
 description: "SkipTheBrowse - AI-powered movie and TV show recommendation service"
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
-version: 0.0.0+1
+version: 0.0.1
 
 environment:
   sdk: ^3.9.2
