--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -55,7 +55,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        api-level: [ 30, 31, 32, 33, 34, 35 ]
+        api-level: [ 31, 32, 33, 34, 35 ]
     needs: analyze-and-test
     timeout-minutes: 60
 
