--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -521,20 +521,58 @@ jobs:
         uses: actions/checkout@v6
         with:
           fetch-depth: 0
-      - name: Generate changelog
-        id: changelog
-        uses: requarks/changelog-action@v1
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          tag: ${{ github.ref_name }}
-          writeToFile: false
-          includeInvalidCommits: false
-          excludeTypes: 'build,docs,style,chore'
+
+      - name: Get Commits
+        id: get_commits
+        run: |
+          PREVIOUS_TAG=$(git describe --tags --abbrev=0 HEAD^ 2>/dev/null || echo "")
+          if [ -z "$PREVIOUS_TAG" ]; then
+            COMMITS=$(git log --pretty=format:"- %s")
+          else
+            COMMITS=$(git log $PREVIOUS_TAG..HEAD --pretty=format:"- %s")
+          fi
+          echo "commits<<EOF" >> $GITHUB_OUTPUT
+          echo "$COMMITS" >> $GITHUB_OUTPUT
+          echo "EOF" >> $GITHUB_OUTPUT
+
+      - name: Generate AI Release Notes
+        id: ai_notes
+        env:
+          OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
+        run: |
+          if [ -z "$OPENAI_API_KEY" ]; then
+            echo "notes=AI Release Notes skipped (Missing OPENAI_API_KEY secret)." >> $GITHUB_OUTPUT
+            exit 0
+          fi
+
+          PROMPT="You are a professional release note generator for 'SkipTheBrowse'. Based on the following commits, write a user-friendly release summary. Group them into '🚀 New Features', '✨ Improvements', and '🛠️ Bug Fixes'. Use an engaging tone and emojis. Ignore internal chores or technical build updates. Commits:\n${{ steps.get_commits.outputs.commits }}"
+          
+          # Encode prompt for JSON
+          JSON_PROMPT=$(echo "$PROMPT" | jq -aRs .)
+
+          RESPONSE=$(curl https://api.openai.com/v1/chat/completions \
+            -H "Content-Type: application/json" \
+            -H "Authorization: Bearer $OPENAI_API_KEY" \
+            -d "{
+              \"model\": \"gpt-4o-mini\",
+              \"messages\": [{\"role\": \"user\", \"content\": $JSON_PROMPT}]
+            }")
+          
+          NOTES=$(echo $RESPONSE | jq -r '.choices[0].message.content // "AI generation failed."')
+          
+          echo "notes<<EOF" >> $GITHUB_OUTPUT
+          echo "$NOTES" >> $GITHUB_OUTPUT
+          echo "EOF" >> $GITHUB_OUTPUT
+
       - name: Create/Update Release
         uses: softprops/action-gh-release@v2
         with:
           body: |
-            ${{ steps.changelog.outputs.changes }}
+            ${{ steps.ai_notes.outputs.notes }}
+
+            ---
+            ### Technical Changelog
+            ${{ steps.get_commits.outputs.commits }}
 
             ---
 
