--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   go_router: ^17.0.1
   url_launcher: ^6.3.1
   shared_preferences: ^2.3.3
+  window_manager: ^0.5.1
 
 dev_dependencies:
   flutter_test:
