--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -299,7 +299,7 @@ jobs:
     name: Release Android & Web
     runs-on: ubuntu-latest
     needs: [android, web]
-    if: startsWith(github.ref, 'refs/tags/v')
+#    if: startsWith(github.ref, 'refs/tags/v')
     permissions:
       contents: write
 
@@ -362,7 +362,7 @@ jobs:
         uses: r0adkll/upload-google-play@v1
         with:
           serviceAccountJsonRaw: ${{ secrets.PLAY_STORE_CONFIG_JSON }}
-          packageName: Skipthebrowse
+          packageName: com.tarbadev.skipthebrowse
           releaseFiles: build/app/outputs/bundle/release/app-release.aab
           track: internal
           status: completed
