--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -272,34 +272,11 @@ jobs:
           --dart-define=API_BASE_URL=https://skipthebrowse-backend.onrender.com
           --dart-define=ENVIRONMENT=dev
 
-  web:
-    name: Web
-    runs-on: ubuntu-latest
-    needs: analyze-and-test
-    timeout-minutes: 20
-
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v6
-
-      - name: Setup Flutter
-        uses: subosito/flutter-action@v2
-        with:
-          flutter-version: ${{ env.FLUTTER_VERSION }}
-          channel: 'stable'
-          cache: true
-
-      - name: Get dependencies
-        run: flutter pub get
-
-      - name: Build web app
-        run: flutter build web --release
-
   release-android:
-    name: Release Android & Web
+    name: Release Android
     runs-on: ubuntu-latest
-    needs: [android, web]
-#    if: startsWith(github.ref, 'refs/tags/v')
+    needs: [android]
+    if: startsWith(github.ref, 'refs/tags/v')
     permissions:
       contents: write
 
@@ -328,9 +305,6 @@ jobs:
 
       - name: Build Android
         run: |
-          flutter build apk --release \
-            --build-name=${GITHUB_REF_NAME#v} \
-            --build-number=${GITHUB_RUN_NUMBER}
           flutter build appbundle --release \
             --build-name=${GITHUB_REF_NAME#v} \
             --build-number=${GITHUB_RUN_NUMBER}
@@ -338,6 +312,37 @@ jobs:
           ANDROID_KEYSTORE_PASSWORD: ${{ secrets.ANDROID_KEYSTORE_PASSWORD }}
           ANDROID_KEY_ALIAS: ${{ vars.ANDROID_KEY_ALIAS }}
           ANDROID_KEY_PASSWORD: ${{ secrets.ANDROID_KEYSTORE_PASSWORD }}
+
+      - name: Upload to Google Play Internal Testing
+        uses: r0adkll/upload-google-play@v1
+        with:
+          serviceAccountJsonPlainText: ${{ secrets.PLAY_STORE_CONFIG_JSON }}
+          packageName: com.tarbadev.skipthebrowse
+          releaseFiles: build/app/outputs/bundle/release/app-release.aab
+          track: internal
+          status: draft
+
+  release-web:
+    name: Release Web
+    runs-on: ubuntu-latest
+    needs: [analyze-and-test]
+    if: startsWith(github.ref, 'refs/tags/v')
+    permissions:
+      contents: write
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v6
+
+      - name: Setup Flutter
+        uses: subosito/flutter-action@v2
+        with:
+          flutter-version: ${{ env.FLUTTER_VERSION }}
+          channel: 'stable'
+          cache: true
+
+      - name: Get dependencies
+        run: flutter pub get
 
       - name: Build Web
         run: flutter build web --release
@@ -351,21 +356,9 @@ jobs:
       - name: Upload to Release
         uses: softprops/action-gh-release@v2
         with:
-          files: |
-            build/app/outputs/flutter-apk/app-release.apk
-            build/app/outputs/bundle/release/app-release.aab
-            skipthebrowse-web.tar.gz
+          files: skipthebrowse-web.tar.gz
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Upload to Google Play Internal Testing
-        uses: r0adkll/upload-google-play@v1
-        with:
-          serviceAccountJsonRaw: ${{ secrets.PLAY_STORE_CONFIG_JSON }}
-          packageName: com.tarbadev.skipthebrowse
-          releaseFiles: build/app/outputs/bundle/release/app-release.aab
-          track: internal
-          status: completed
 
   release-ios:
     name: Release iOS
@@ -537,7 +530,7 @@ jobs:
   create-release:
     name: Create GitHub Release
     runs-on: ubuntu-latest
-    needs: [release-android, release-ios, release-macos, release-linux, release-windows]
+    needs: [release-android, release-web, release-ios, release-macos, release-linux, release-windows]
     if: startsWith(github.ref, 'refs/tags/v')
     permissions:
       contents: write
