--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -218,7 +218,7 @@ jobs:
           sudo apt-get update -y
           sudo apt-get install -y \
             clang cmake ninja-build pkg-config libgtk-3-dev \
-            liblzma-dev libstdc++-12-dev xvfb
+            liblzma-dev libstdc++-12-dev xvfb libcurl4-openssl-dev
 
       - name: Setup Flutter
         uses: subosito/flutter-action@v2
@@ -275,7 +275,7 @@ jobs:
   release-android:
     name: Release Android
     runs-on: ubuntu-latest
-    needs: [android]
+    needs: android
     if: startsWith(github.ref, 'refs/tags/v')
     permissions:
       contents: write
@@ -305,13 +305,62 @@ jobs:
 
       - name: Build Android
         run: |
-          flutter build appbundle --release \
+          flutter build appbundle \
+            --dart-define=API_BASE_URL=https://skipthebrowse-backend.onrender.com \
+            --dart-define=ENVIRONMENT=dev \
+            --release \
             --build-name=${GITHUB_REF_NAME#v} \
-            --build-number=${GITHUB_RUN_NUMBER}
+            --build-number=${GITHUB_RUN_NUMBER} \
+            --obfuscate \
+            --split-debug-info=build/debug-info
         env:
           ANDROID_KEYSTORE_PASSWORD: ${{ secrets.ANDROID_KEYSTORE_PASSWORD }}
           ANDROID_KEY_ALIAS: ${{ vars.ANDROID_KEY_ALIAS }}
           ANDROID_KEY_PASSWORD: ${{ secrets.ANDROID_KEYSTORE_PASSWORD }}
+
+      - name: Send debug symbols to Sentry
+        run: flutter pub run sentry_dart_plugin
+        env:
+          SENTRY_AUTH_TOKEN: ${{ secrets.SENTRY_AUTH_TOKEN }}
+
+      - name: Get Commits
+        id: get_commits
+        run: |
+          PREVIOUS_TAG=$(git describe --tags --abbrev=0 HEAD^ 2>/dev/null || echo "")
+          if [ -z "$PREVIOUS_TAG" ]; then
+            COMMITS=$(git log --pretty=format:"- %s")
+          else
+            COMMITS=$(git log $PREVIOUS_TAG..HEAD --pretty=format:"- %s")
+          fi
+          echo "commits<<EOF" >> $GITHUB_OUTPUT
+          echo "$COMMITS" >> $GITHUB_OUTPUT
+          echo "EOF" >> $GITHUB_OUTPUT
+
+      - name: Generate Short AI Release Notes (Android)
+        id: android_notes
+        env:
+          OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
+        run: |
+          if [ -z "$OPENAI_API_KEY" ]; then
+            echo "notes=Updates and improvements." > android_whatsnew.txt
+          else
+            PROMPT="Write a user-friendly 'What's New' note for the Google Play Store based on these commits. Focus only on features and fixes. Strictly max 450 characters. No markdown. Commits:\n${{ steps.get_commits.outputs.commits }}"
+            JSON_PROMPT=$(echo "$PROMPT" | jq -aRs .)
+            RESPONSE=$(curl https://api.openai.com/v1/chat/completions \
+              -H "Content-Type: application/json" \
+              -H "Authorization: Bearer $OPENAI_API_KEY" \
+              -d "{
+                \"model\": \"gpt-4o-mini\",
+                \"messages\": [{\"role\": \"user\", \"content\": $JSON_PROMPT}]
+              }")
+            NOTES=$(echo $RESPONSE | jq -r '.choices[0].message.content // "Updates and improvements."')
+            echo "$NOTES" > android_whatsnew.txt
+          fi
+          mkdir -p distribution/whatsnew
+          cp android_whatsnew.txt distribution/whatsnew/whatsnew-en-US
+
+      - name: Display release note
+        run: cat distribution/whatsnew/whatsnew-en-US
 
       - name: Upload to Google Play Internal Testing
         uses: r0adkll/upload-google-play@v1
@@ -321,6 +370,7 @@ jobs:
           releaseFiles: build/app/outputs/bundle/release/app-release.aab
           track: internal
           status: draft
+          whatsNewDirectory: distribution/whatsnew
 
   release-web:
     name: Release Web
@@ -345,7 +395,11 @@ jobs:
         run: flutter pub get
 
       - name: Build Web
-        run: flutter build web --release
+        run: |
+          flutter build web \
+            --dart-define=API_BASE_URL=https://skipthebrowse-backend.onrender.com \
+            --dart-define=ENVIRONMENT=dev \
+            --release
 
       - name: Package Web
         run: |
@@ -383,7 +437,11 @@ jobs:
         run: flutter pub get
 
       - name: Build iOS
-        run: flutter build ios --release --no-codesign
+        run: |
+          flutter build ios \
+            --dart-define=API_BASE_URL=https://skipthebrowse-backend.onrender.com \
+            --dart-define=ENVIRONMENT=dev \
+            --release --no-codesign
 
       - name: Create IPA
         run: |
@@ -425,7 +483,11 @@ jobs:
         run: flutter pub get
 
       - name: Build macOS
-        run: flutter build macos --release
+        run: |
+          flutter build macos \
+            --dart-define=API_BASE_URL=https://skipthebrowse-backend.onrender.com \
+            --dart-define=ENVIRONMENT=dev \
+            --release
 
       - name: Create ZIP
         run: |
@@ -455,7 +517,7 @@ jobs:
       - name: Install Linux dependencies
         run: |
           sudo apt-get update -y
-          sudo apt-get install -y clang cmake ninja-build pkg-config libgtk-3-dev liblzma-dev libstdc++-12-dev
+          sudo apt-get install -y clang cmake ninja-build pkg-config libgtk-3-dev liblzma-dev libstdc++-12-dev libcurl4-openssl-dev
 
       - name: Setup Flutter
         uses: subosito/flutter-action@v2
@@ -471,7 +533,11 @@ jobs:
         run: flutter pub get
 
       - name: Build Linux
-        run: flutter build linux --release
+        run: |
+          flutter build linux \
+            --dart-define=API_BASE_URL=https://skipthebrowse-backend.onrender.com \
+            --dart-define=ENVIRONMENT=dev \
+            --release
 
       - name: Create tarball
         run: |
@@ -512,7 +578,11 @@ jobs:
         run: flutter pub get
 
       - name: Build Windows
-        run: flutter build windows --release
+        run: |
+          flutter build windows \
+            --dart-define=API_BASE_URL=https://skipthebrowse-backend.onrender.com \
+            --dart-define=ENVIRONMENT=dev \
+            --release
 
       - name: Create ZIP
         run: |
