--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,6 +8,7 @@ environment:
   sdk: ^3.9.2
 
 dependencies:
+  sentry_flutter: ^9.9.1
   flutter:
     sdk: flutter
 
@@ -23,6 +24,7 @@ dependencies:
   window_manager: ^0.5.1
 
 dev_dependencies:
+  sentry_dart_plugin: ^3.2.0
   flutter_test:
     sdk: flutter
   flutter_lints: ^6.0.0
@@ -40,3 +42,9 @@ flutter:
 
   assets:
     - assets/images/providers/
+
+sentry:
+  upload_debug_symbols: true
+  upload_source_maps: true
+  project: skipthebrowse-client
+  org: tarbadev
