--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -276,13 +276,15 @@ jobs:
     name: Release Android
     runs-on: ubuntu-latest
     needs: android
-    if: startsWith(github.ref, 'refs/tags/v')
+    if: github.event_name == 'push'
     permissions:
       contents: write
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v6
+        with:
+          fetch-depth: 0
 
       - name: Setup Java
         uses: actions/setup-java@v5
@@ -300,6 +302,17 @@ jobs:
       - name: Get dependencies
         run: flutter pub get
 
+      - name: Get version
+        id: get_version
+        run: |
+          if [[ $GITHUB_REF == refs/tags/* ]]; then
+            VERSION=${GITHUB_REF_NAME#v}
+          else
+            PUBSPEC_VERSION=$(grep '^version: ' pubspec.yaml | cut -d ' ' -f 2 | cut -d '+' -f 1)
+            VERSION="${PUBSPEC_VERSION}+${GITHUB_RUN_NUMBER}"
+          fi
+          echo "version=$VERSION" >> $GITHUB_OUTPUT
+
       - name: Decode Keystore
         run: echo "${{ secrets.ANDROID_KEYSTORE_BASE64 }}" | base64 --decode > android/app/upload-keystore.jks
 
@@ -309,7 +322,7 @@ jobs:
             --dart-define=API_BASE_URL=https://skipthebrowse-backend.onrender.com \
             --dart-define=ENVIRONMENT=dev \
             --release \
-            --build-name=${GITHUB_REF_NAME#v} \
+            --build-name=${{ steps.get_version.outputs.version }} \
             --build-number=${GITHUB_RUN_NUMBER} \
             --obfuscate \
             --split-debug-info=build/debug-info
@@ -325,6 +338,7 @@ jobs:
 
       - name: Get Commits
         id: get_commits
+        if: startsWith(github.ref, 'refs/tags/v')
         run: |
           PREVIOUS_TAG=$(git describe --tags --abbrev=0 HEAD^ 2>/dev/null || echo "")
           if [ -z "$PREVIOUS_TAG" ]; then
@@ -341,10 +355,8 @@ jobs:
         env:
           OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
         run: |
-          if [ -z "$OPENAI_API_KEY" ]; then
-            echo "notes=Updates and improvements." > android_whatsnew.txt
-          else
-            PROMPT="Write a user-friendly 'What's New' note for the Google Play Store based on these commits. Focus only on features and fixes. Strictly max 450 characters. No markdown. Commits:\n${{ steps.get_commits.outputs.commits }}"
+          if [[ $GITHUB_REF == refs/tags/* ]] && [ -n "$OPENAI_API_KEY" ]; then
+            PROMPT="Write a user-friendly 'What's New' note for the Google Play Store based on these commits. Focus only on features and fixes. Strictly max 500 characters. List out bullet points, not a big paragraph. No markdown. Commits:\n${{ steps.get_commits.outputs.commits }}"
             JSON_PROMPT=$(echo "$PROMPT" | jq -aRs .)
             RESPONSE=$(curl https://api.openai.com/v1/chat/completions \
               -H "Content-Type: application/json" \
@@ -355,6 +367,8 @@ jobs:
               }")
             NOTES=$(echo $RESPONSE | jq -r '.choices[0].message.content // "Updates and improvements."')
             echo "$NOTES" > android_whatsnew.txt
+          else
+            echo "Internal development build and improvements." > android_whatsnew.txt
           fi
           mkdir -p distribution/whatsnew
           cp android_whatsnew.txt distribution/whatsnew/whatsnew-en-US
