--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -383,7 +383,7 @@ jobs:
           packageName: com.tarbadev.skipthebrowse
           releaseFiles: build/app/outputs/bundle/release/app-release.aab
           track: internal
-          status: draft
+          status: complete
           whatsNewDirectory: distribution/whatsnew
 
   release-web:
