--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   url_launcher: ^6.3.1
   shared_preferences: ^2.3.3
   window_manager: ^0.5.1
+  flutter_secure_storage: ^9.2.4
 
 dev_dependencies:
   sentry_dart_plugin: ^3.2.0
